--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   --green-300: #35858b;
   --green-400: #072227;
   --green-500: #212121;
+  --main-size: calc(100vh - (153px + 68px));
 }
 
 /* global variables end */
@@ -71,6 +72,7 @@ body {
 header > h1 {
   text-align: center;
   padding: 1rem 1rem 0 1rem;
+  /* font-size: 24px; */
   font-weight: 700;
   color: var(--green-100);
 }
@@ -87,7 +89,7 @@ header > h1 {
   padding: 1rem;
 }
 
-.form-inputs{
+.form-inputs {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -99,14 +101,15 @@ input {
   background-color: var(--green-400);
   border: 1px solid var(--green-100);
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   padding: 0.25rem 0.5rem;
   color: var(--green-100);
-  transition: .2s;
+  
 }
 
-input:focus-visible {
+input:focus {
+  transition: 0.1s;
   outline: 2px solid var(--green-100);
   box-shadow: 0px 0px 20px 1px var(--green-100);
 }
@@ -114,19 +117,45 @@ input:focus-visible {
 ::placeholder {
   color: var(--green-100);
   opacity: 50%;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
 }
 
-.btn-movie-form{
+.btn-movie-form {
   background-color: var(--green-100);
   border: none;
   border-radius: 5px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
   padding: 0.25rem 0.5rem;
   color: var(--green-400);
-  padding: .25rem 6rem;
+  padding: 0.25rem 6rem;
 }
 /* form end */
+
 /* header end*/
+
+/* footer */
+footer {
+  background-color: var(--green-200);
+  padding: 0.5rem;
+}
+footer > p {
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--green-500);
+  text-align: center;
+  padding: 0.25rem;
+}
+footer > p > a {
+  text-decoration: none;
+  color: var(--green-500);
+}
+
+/* footer end */
+
+/* main */
+main {
+  height: var(--main-size);
+}
+/* main end */
