--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,13 @@ body {
   border: none;
   border-radius: 5px;
   color: var(--green-400);
+  border: 1px solid var(--green-100);
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: var(--green-400);
+  color: var(--green-100);
 }
 
 /* header */
@@ -116,8 +123,7 @@ input {
 
 input:focus {
   transition: 0.1s;
-  outline: 2px solid var(--green-100);
-  box-shadow: 0px 0px 20px 1px var(--green-100);
+  outline: 1.5px solid var(--green-100);
 }
 
 ::placeholder {
@@ -224,7 +230,7 @@ main {
 }
 
 .card-rate-star {
-  margin: auto 0px auto 2px;
+  padding: 0 0 2px 2px;
 }
 
 .card-review-container {
